Linuxでpodman compose upしたときに、/docsの操作がPermission deniedになる問題を修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     image: asciidoctor-image
     container_name: asciidoctor
     volumes:
-      - .:/docs
+      - .:/docs:z
     command: ['make', 'pdf']
